# urirun-connector-smart-crop

./: README.md  pyproject.toml
tests/: conftest.py  test_smart_crop.py
urirun_connector_smart_crop/: __init__.py  connector.manifest.json  contracts.py  core.py
