[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-smart-crop"
version = "0.1.0"
description = "Document and receipt detection/cropping connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14", "pillow>=10", "numpy>=1.26", "opencv-python-headless>=4.8"]

[project.optional-dependencies]
text-boundary = ["pytesseract>=0.3.10"]
test = ["pytest>=8", "pillow>=10", "numpy>=1.26", "opencv-python-headless>=4.8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/smart-crop"
Repository = "https://github.com/if-uri/urirun-connector-smart-crop"

[project.scripts]
urirun-smart-crop = "urirun_connector_smart_crop.core:main"

[project.entry-points."urirun.bindings"]
smartcrop = "urirun_connector_smart_crop.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_smart_crop*"]

[tool.setuptools.package-data]
urirun_connector_smart_crop = ["connector.manifest.json"]
